--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -8,9 +8,9 @@
   justify-content: center;
 }
 
-.view-compact .al-item {
+.view-compact {
   margin-bottom: 1.5rem;
-  padding-bottom: 0.8rem;
-  border-bottom: 1px solid #e0e0e0;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #e0e0e0; // 浅灰分隔线
 }
 
