--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -14,3 +14,7 @@
   border-bottom: 1px solid #e0e0e0; // 浅灰分隔线
 }
 
+/* 如果只想改特定标题（比如包含 Journal Papers/Articles） */
+.section-title:has(span:contains("Journal Papers/Articles")) {
+  font-size: 1.5rem;
+}
