--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -65,3 +65,14 @@
     margin-top: 0 !important;
   }
 }
+
+/* 给加星号的作者名添加星号 */
+.pub-compact .author {
+  position: relative;
+}
+
+.pub-compact .author[data-star="true"]::after {
+  content: "*";
+  font-weight: bold;
+  margin-left: 2px;
+}
