--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -66,9 +66,8 @@
   }
 }
 
-/* 给 compact view 的作者名加星号 */
-.pub-compact .author:first-child::after {
-  content: "*";
+// Publication 页面中，将 Yuhao Zhang* 加粗
+.publication-author a[href$="/authors/Yuhao Zhang/"] {
   font-weight: bold;
-  margin-left: 2px;
 }
+
