--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -67,7 +67,7 @@
 }
 
 /* Publication 页面中，将 Yuhao Zhang* 加粗 */
-.stream-meta.article-metadata a[href="/author/yuhao-zhang/"] {
+.stream-meta.article-metadata a[href="/author/Yuhao Zhang/"] {
   font-weight: bold !important;
 }
 
