--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -88,5 +88,5 @@
 .article-banner {
   object-fit: cover !important;  /* 保持填充 */
   width: 100% !important;
-  height: 400px !important;  /* 可以自己调，比如 200px-300px */
+  height: 100% !important;
 }
