--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -94,7 +94,7 @@
 .pub-list img {
   object-fit: contain !important;
   width: 100% !important;
-  height: auto !important;
+  height: 100% !important;
 }
 
 
