--- a/layouts/partials/views/card.html
+++ b/layouts/partials/views/card.html
@@ -10,26 +10,29 @@
 {{ $resource := partial "functions/get_featured_image.html" $item }}
 {{ $anchor := $item.Params.image.focal_point | default "Center" }}
 
+{{ $resource := partial "functions/get_featured_image.html" $item }}
+{{ $anchor := $item.Params.image.focal_point | default "Center" }}
+
 <a href="{{ $link }}" {{ $target | safeHTMLAttr }} class="mb-5">
   <div class="md:flex">
     <div class="md:flex-shrink-0 overflow-hidden">
       {{ with $resource }}
-        {{ $original_image := .Resize "800x" }}
+        {{ $original_image := .Fit "808x455" }}
         {{ $responsive := partial "functions/process_responsive_image.html" (dict 
             "image" $original_image 
             "mode" "responsive"
-            "sizes" (slice 192 384 480 655)
+            "sizes" (slice 192 384 480 655 808)
         ) }}
         
-        <img class="w-full object-contain hover:scale-105 transition duration-500 cursor-pointer"
+        <img class="h-[455px] w-[808px] object-contain hover:scale-105 transition duration-500 cursor-pointer" 
              srcset="{{ $responsive.srcset }}"
-             sizes="(max-width: 768px) 100vw, 192px"
+             sizes="(max-width: 808px) 100vw, 808px"
              src="{{ $responsive.fallback.RelPermalink }}" 
              width="{{ $original_image.Width }}" 
              height="{{ $original_image.Height }}"
              loading="lazy" 
              alt="{{ $item.Title | plainify }}">
-      {{end}}
+      {{ end }}
     </div>
     <div class="p-8">
       <div class="uppercase tracking-wide text-md text-primary-700 dark:text-primary-200 font-semibold">{{ $item.Title }}</div>
