--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -1,3 +1,5 @@
+@import "blox-tailwind/scss/main";
+
 // Make page header alignment consistent with widget page header alignment
 .universal-wrapper h1 {
   text-align: center;
