--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -146,3 +146,9 @@
   display: none !important;
 }
 
+.post-meta-manual {
+  font-weight: bold;
+  color: #555;
+  margin-bottom: 0.5em;
+  font-size: 0.9em;
+}
